# mkn-viewer

./: .gitignore  AGENT.md  LICENSE  README.md  biome.json  index.html  lefthook.yml  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.cursor/: mcp.json
.cursor/commands/: create-pr.md  install.md  setup.md
.serena/: project.yml
docs/stock/: rust+react.md
docs/stock/feature/: data-flow.md  testing-strategy.md
docs/ticket/template/: plan.md  spec.md  task.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  main.rs
src/components/: ErrorBoundary.tsx  ErrorMessage.tsx  FileTree.tsx  History.tsx  LoadingSpinner.tsx  MarkdownViewer.tsx  SearchPanel.tsx  Sidebar.tsx  TableOfContents.tsx  ThemeSelector.tsx  Welcome.tsx
src/contexts/: ErrorContext.tsx
src/hooks/: useApp.ts  useFileSystem.ts  useSearch.ts  useShortcut.test.ts  useShortcut.ts  useSidebar.test.ts  useSidebar.ts  useTheme.test.ts  useTheme.ts
src/lib/: error.test.ts  error.ts  shortcuts.ts  storage.ts  tauri.ts  toc.ts
src/test/: setup.ts
src/types/: index.ts
